Replace the positional-slot constructors with named options (#99)
AgentLoopExecutor took 22 optional collaborators as Object... read back by
hard-coded index, and AgentLoopExecutorFactory took 18 the same way. Two
failure modes the compiler could not see: pass them out of order and it blows
up at runtime as a ClassCastException, and -- the dangerous one -- insert a new
parameter in the middle and every slot after it is silently displaced. Adding
the data-provenance gate (#104) came within one line of displacing
runtimeProfile that way, and the analytics executor missing skillManager (#95)
was the same class of mistake: a collaborator nobody passed, with nothing to
report it until DataAgent turned out to have no SOP at runtime.

Both classes now take their Builder. Every option is a name, so a wrong order
or a missing one is a compile error. The 13 executor and 19 factory call sites
in tests move to builder chains -- one of them was 22 positional arguments,
mostly nulls, to set the last one. Builder gains roundTimeout(), which only
existed as slot 18.

Also two crashes that came out of the first full golden run, same root cause in
two places -- List.copyOf/Map.copyOf reject nulls:

- SqlResult copied each row with List.copyOf, so any result containing a SQL
  NULL threw. A LEFT JOIN with no match, or SELECT * over a nullable column,
  turned into "查询执行失败：NullPointerException" and the model could only
  guess at another phrasing. This is why sql-005 and several LEFT JOIN cases
  had been failing.
- The golden harness copied its metrics map the same way, and queryError holds
  an exception message, which is null for an NPE. A failed query was upgraded
  into a lost observation: the report showed "executor failed" and hid the
  actual reason.

completeRun/failRun now release the single-flight slot before signalling the
end downstream. The old order let a caller that acts on Complete immediately --
the frontend, or a test asserting the lock is free -- race the release an